Fixed sign-in button not being vertically centered on mobile

--- a/app/assets/stylesheets/home/nav.scss
+++ b/app/assets/stylesheets/home/nav.scss
@@ -23,7 +23,7 @@ $nav-space: 20px;
   font-weight: bold;
   padding-right: 5%;
   @media (max-width: 1100px) {
-    padding-top: 40px;
+    padding-top: 30px;
     padding-bottom: 20px;
   }
 }
